--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+}
+
+*{
+  font-family: var(--primary-font);
 }
 
 code {
@@ -42,7 +47,7 @@ li {
 }
 
 .Home {
-  background:linear-gradient(rgba(0, 0, 0, 0.321), rgba(0, 0, 0, 0.973)), url(./Images/bg1.jpg) no-repeat fixed;
+  background:linear-gradient(rgba(0, 0, 0, 0.128), rgba(0, 0, 0, 0.767)), url(./Images/bg1.jpg) no-repeat fixed;
   background-size: cover;
   height: 100vh;
 }
@@ -58,7 +63,7 @@ li {
 
 .active {
   font-weight: 600;
-  color: rgb(243, 177, 63);
+  color: rgb(254,192,87);
 }
 
 .navLinks {
@@ -75,7 +80,6 @@ li {
   text-align: center;
   font-size: 15px;
   text-decoration: none;
-  font-family: var(--primary-font);
 }
 
 .navLinks a:hover {
@@ -143,28 +147,26 @@ li {
   width: 60%;
   height: 49px;
   border-radius: 10px 0px 0px 10px;
-  outline: none;
-  border: none;
+  border: 1px solid rgba(255, 0, 0, 0.893);
   font-size: 18px;
-  font-family: var(--primary-font);
   padding: 10px;
+  outline: none;
 }
 
 .searchInput::placeholder{
   font-size: 17px;
-  font-family: var(--primary-font);
 }
 
 .searchBtn {
   cursor: pointer;
   background: var(--primary);
-  font-family: var(--primary-font);
   color: rgb(233, 233, 233);
   font-size: 18px;
   width: 13%;
   height: 49px;
-  outline: none;
-  border: none;
+  outline-color: red;
+  border: 1px solid rgba(255, 0, 0, 0.893);
+  border-left: none;
   border-radius: 0px 10px 10px 0px;
 }
 
@@ -172,11 +174,80 @@ li {
   cursor: pointer;
   outline: none;
   border: none;
+  border-bottom: 1px solid greenyellow;
   padding: 7px;
-  font-family: var(--primary-font);
   font-size: 13px;
   margin: 18px 0px 0px 7px;
-  border-radius: 4px;
-  background: var(--primary);
+  background: linear-gradient(to top, rgba(32, 32, 32, 0.567), rgba(0, 0, 0, 0));
   color: rgb(255, 255, 255);
+}
+
+.introBtn button:hover {
+  background: linear-gradient(to top, rgb(172, 255, 47), rgba(0, 0, 0, 0.167), rgba(0, 0, 0, 0));
+  transition: 1s;
+}
+
+#openCloseBody{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.572);
+}
+
+.openClose {
+  width: 30%;
+  height: 66%;
+  position: absolute;
+  background: linear-gradient(to top, rgb(121, 1, 1), red);
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  top: calc(50% - 66%/2);
+  left: calc(50% - 30%/2);
+}
+
+.openClose table {
+  padding: 40px;
+  border: 1px solid rgba(255, 255, 255, 0.265);
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+td:nth-child(2){
+  text-align: right;
+}
+
+.contactInfo {
+  font-size: 13px;
+  font-weight: 300;
+}
+
+.openTitle {
+  color: black;
+  padding: 14px;
+  background: white;
+  border-radius: 10px;
+}
+
+.contactInfo .fa-phone {
+  font-size: 12px;
+  margin-right: 5px;
+}
+
+.closeBtn {
+  position: absolute;
+  float: right;
+  left: 91%;
+  top: 5%;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.banner {
+  margin-top: 190px;
+  margin-right: -32px;
+  float: right;
+  cursor: pointer;
+  width: 10%;
 }
