--- a/src/index.css
+++ b/src/index.css
@@ -47,12 +47,15 @@ li {
 }
 
 .Home {
-  background:linear-gradient(rgba(0, 0, 0, 0.128), rgba(0, 0, 0, 0.767)), url(./Images/bg1.jpg) no-repeat fixed;
+  background: url(./Images/bg1.jpg) no-repeat ;
   background-size: cover;
   height: 100vh;
 }
 
 .navBar {
+  z-index: 1000;
+  position: sticky;
+  top: 0;
   background-color: rgba(0, 0, 0, 0.16);
   display: flex;
   justify-content: space-around;
@@ -133,24 +136,38 @@ li {
   padding: 5px;
 }
 
-.socialIcons li {
+.fa-facebook,
+.fa-instagram,
+.fa-twitter,
+.fa-youtube {
   cursor: pointer;
   font-size: 25px;
   padding: 10px;
 }
 
+.fa-facebook:hover, 
+.fa-twitter:hover, 
+.fa-instagram:hover,
+.fa-youtube:hover{
+  transform: scale(1.2);
+  transition: 0.5s;
+}
+
 .searchBar{
-  max-width: 70%;
+  display: flex;
+  width: 50%;
+  background: white;
+  border-radius: 30px;
+  align-items: center;
 }
 
 .searchInput {
-  width: 60%;
+  width: 100%;
   height: 49px;
-  border-radius: 10px 0px 0px 10px;
-  border: 1px solid rgba(255, 0, 0, 0.893);
   font-size: 18px;
-  padding: 10px;
   outline: none;
+  border: none;
+  border-radius: 0 30px 30px 0px;
 }
 
 .searchInput::placeholder{
@@ -159,39 +176,37 @@ li {
 
 .searchBtn {
   cursor: pointer;
-  background: var(--primary);
-  color: rgb(233, 233, 233);
-  font-size: 18px;
-  width: 13%;
-  height: 49px;
-  outline-color: red;
-  border: 1px solid rgba(255, 0, 0, 0.893);
-  border-left: none;
-  border-radius: 0px 10px 10px 0px;
+  font-size: 1.8rem;
+  width: 8%;  
+  color: rgba(217, 12, 12, 0.74);
 }
 
 .introBtn button{
   cursor: pointer;
   outline: none;
   border: none;
-  border-bottom: 1px solid greenyellow;
+  border-radius: 3px;
+  border: 1px solid rgb(255, 255, 255);
   padding: 7px;
   font-size: 13px;
   margin: 18px 0px 0px 7px;
-  background: linear-gradient(to top, rgba(32, 32, 32, 0.567), rgba(0, 0, 0, 0));
+  background: rgba(0, 0, 0, 0.397);
   color: rgb(255, 255, 255);
 }
 
 .introBtn button:hover {
-  background: linear-gradient(to top, rgb(172, 255, 47), rgba(0, 0, 0, 0.167), rgba(0, 0, 0, 0));
-  transition: 1s;
+  transition: 0.5s;
+  background: rgba(120, 120, 120, 0.47);
 }
 
 #openCloseBody{
+  z-index: 100;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
   position: fixed;
-  background: rgba(0, 0, 0, 0.572);
+  background: rgba(0, 0, 0, 0.572);  
 }
 
 .openClose {
@@ -244,10 +259,26 @@ td:nth-child(2){
   font-size: 18px;
 }
 
+.banner:hover {
+  transform: scale(1.02);
+  transition: 0.5s;
+
+}
+
 .banner {
   margin-top: 190px;
   margin-right: -32px;
   float: right;
   cursor: pointer;
   width: 10%;
+}
+
+@keyframes bannerEase {
+  0%{opacity: 0}
+  100%{opacity: 1}
+}
+
+.menuSection {
+  height: 100vh;
+  background: white;
 }
