--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ li {
 
 .logo img{
   width: 100%;
-  padding: 5px;
+  padding: 2px;
 }
 
 .sectionOne {
@@ -100,7 +100,7 @@ li {
   width: 3.8em;
   padding: 3px;
   text-align: center;
-  font-size: 0.9rem;
+  font-size: 0.78em;
   text-decoration: none;
 }
 
@@ -111,7 +111,7 @@ li {
 }
 
 .user-icons {
-  padding: 0 10px 0 10px;
+  padding: 0 0.5em 0 0.5em;
   width: 8%;
   display: flex;
   justify-content: space-around;
@@ -274,7 +274,6 @@ li {
 
 .openClose {
   width: 30%;
-  height: 66%;
   position: absolute;
   background: linear-gradient(to top, rgb(121, 1, 1), red);
   color: white;
@@ -289,7 +288,6 @@ li {
   border: 1px solid rgba(255, 255, 255, 0.265);
   border-radius: 10px;
   width: 100%;
-  height: 100%;
 }
 
 td:nth-child(2){
@@ -349,15 +347,15 @@ td:nth-child(2){
 
 .menuTitle {
   border-bottom: 1px solid grey;
-  padding-bottom: 10px;
-  margin: 30px 0 30px 0px;
+  padding: 30px 0 10px 0;
+  margin: 0 0 30px 0px;
   font-size: 2rem;
   font-weight: 600;
 }
 
 .sectionTwo {
+  background: radial-gradient(circle at 10% 20%, rgb(128, 248, 174) 0%, rgb(223, 244, 148) 90%);
   width: 100%;
-  height: 240vh;
 }
 
 .menuSection {
@@ -367,7 +365,6 @@ td:nth-child(2){
 }
 
 .menuSearchOption {
-  background: rgb(255, 255, 255);
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -384,8 +381,7 @@ td:nth-child(2){
   box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
   padding: 10px;
   margin: 20px 11px 0 11px;
-  width: 13rem;
-  height: 20rem;
+  width: 11rem;
   display: flex;
   flex-direction: column;
   background: rgb(255, 255, 255);
@@ -393,13 +389,14 @@ td:nth-child(2){
 }
 
 .mealName {
-  font-size: 1.4em;
+  font-size: 1.1em;
   font-weight: 600;
   color: rgba(0, 0, 0, 0.777);
   margin-top: 8px;
 }
 
 .addCartBtn {
+  cursor: pointer;
   width: 6rem;
   height: 2rem;
   outline: none;
@@ -407,4 +404,22 @@ td:nth-child(2){
   background: rgba(255, 0, 0, 0.849);
   color: rgb(255, 255, 255);
   border-radius: 6px;
+}
+
+.seeMore {
+  display: flex;
+  justify-content: right;
+  padding: 20px;
+  margin-right: 30px;
+}
+
+.seeMore  div{
+  cursor: pointer;
+  font-size: 15px;
+  padding: 5px;
+  text-align: center;
+  width: 6rem;
+  background: rgba(255, 0, 0, 0.849);
+  color: white;
+  border-radius: 0.3em;
 }
