--- a/src/index.css
+++ b/src/index.css
@@ -330,7 +330,7 @@ td:nth-child(2){
   padding: 5px;
   display: flex;
   justify-content: center;
-  margin: 8rem 1rem 0 0;
+  margin: 10rem 1rem 0 0;
   width: 10%;
   float: right;
 }
@@ -423,4 +423,17 @@ td:nth-child(2){
   background: rgba(255, 32, 32, 0.992);
   color: white;
   border-radius: 0.3em;
+}
+.chefSection {
+  padding: 0 3rem 0 3rem;
+}
+
+.chefSectionTitle {
+  text-align: center;
+  border-bottom: 1px solid grey;
+  padding: 30px 0 10px 0;
+  margin: 0 0 30px 0px;
+  font-size: 2rem;
+  font-weight: 600;
+  color: rgb(41, 41, 41);
 }
