--- a/src/index.css
+++ b/src/index.css
@@ -437,3 +437,11 @@ td:nth-child(2){
   font-weight: 600;
   color: rgb(41, 41, 41);
 }
+
+.chefOne {
+  display: flex;
+}
+
+.chefOne img{
+  width: 30%;
+}
