--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,18 @@ li {
   color: white
 }
 
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100dvh;
+}
+
+.loading img {
+  width: 4%;
+  animation: loading 0.8s infinite linear alternate-reverse;
+}
 
 .logo {
   max-width:10%;
@@ -184,6 +196,7 @@ li {
 }
 
 .introSearch {
+  width: 50%;
   padding-left: 30px;
   align-items: left;
   display: flex;
@@ -248,7 +261,7 @@ li {
 
 .searchBar{
   display: flex;
-  width: 100%;
+  width: 68.7%;
   background: white;
   border-radius: 10px;
   align-items: center;
@@ -283,24 +296,45 @@ li {
 .searchDropdown {
   margin: 5px;
   border-radius: 5px;
-  width: 49%;
+  width: 32%;
   background: white;
   max-height: 35vh;
   overflow-y: scroll;
+  z-index: 2;
   position: absolute;
-  left: calc(50% - 50%/2);
 }
 
-.searchDropdown div {
+.dropdownItem {
+  display: flex;
   cursor: pointer;
-  font-size: 13px;
+  font-size: 15px;
   color: rgba(0, 0, 0, 0.752);
   padding: 5px;
   border-bottom: 1px solid rgba(128, 128, 128, 0.208);
 }
 
-.searchDropdown div:hover {
-  background: rgba(128, 128, 128, 0.325);
+.dropdownInfo{
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 0 7px;
+}
+
+.dropdownName {
+  font-weight: 600;
+}
+
+.dropdownPrice {
+  font-size: 14px;
+}
+.dropdownItem:hover {
+  background: rgba(128, 128, 128, 0.201);
+}
+
+.dropdownImage {
+  width: 4rem;
+  object-fit: cover;
+  height: 3rem;
+  border-radius: 4px;
 }
 
 .introBtn button{
@@ -324,12 +358,12 @@ li {
 
 .introBtn button:nth-child(1):hover {
   transition: 0.3s;
-  background: rgb(223, 26, 0)
+  background: rgb(61, 61, 61)
 }
 
 .introBtn button:nth-child(2):hover {
   transition: 0.5s;
-  background: rgba(226, 41, 41, 0.404);
+  background: rgba(72, 72, 72, 0.224);
 }
 
 #openCloseBody{
@@ -345,7 +379,8 @@ li {
 .openClose {
   width: 30%;
   position: absolute;
-  background: linear-gradient(to top, rgb(121, 1, 1), red);
+  background: rgb(41, 41, 41);
+  border: 3.6px solid rgb(239,188,43);
   color: white;
   padding: 10px;
   border-radius: 10px;
@@ -355,8 +390,8 @@ li {
 
 .openClose table {
   padding: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.265);
-  border-radius: 10px;
+  border: 1px solid rgba(239, 187, 43, 0.625);
+  border-radius: 7px;
   width: 100%;
 }
 
@@ -375,7 +410,7 @@ td:nth-child(2){
 }
 
 .openTitle {
-  color: black;
+  color: rgb(41, 41, 41);
   margin: 20px 0 20px 0;
   padding: 14px;
   background: white;
@@ -419,9 +454,10 @@ td:nth-child(2){
   font-size: 15px;
   color: rgb(59, 59, 59);
   cursor: pointer;
+  font-weight: 600;
 }
 
-.CloseBanner {
+.closeBanner {
   color: rgb(255, 255, 255);
   background: rgb(41,41,41);
 }
@@ -439,7 +475,9 @@ td:nth-child(2){
 }
 
 .sectionTwo {
-  background: linear-gradient(to top, #0fd850 0%, #f9f047 100%);
+  background: url(https://i.ibb.co/6sZt2sw/Bg2-min.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
 }
 
@@ -456,51 +494,83 @@ td:nth-child(2){
   width: 100%;
 }
 
-
-
-.mealCard img {
-  border-radius: 10px 10px 0 0;
-}
-
 .mealCard {
   box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
-  padding: 5px;
-  margin: 20px 18px 0 18px;
-  width: 12rem;
+  padding: 13px;
+  margin: 20px 13px 0 13px;
+  width: 15.5rem;
   display: flex;
   flex-direction: column;
   background: rgb(255, 255, 255);
-  border-radius: 15px;
+  border-radius: 8px;
 }
 
+
+.mealCard img {
+  align-self: center;
+  width: 100%;
+  height: 210px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+
 .mealName {
-  font-size: 1.1em;
+  height: 7vh;
+  font-size: 130%;
   font-weight: 600;
-  color: rgba(0, 0, 0, 0.777);
-  margin-top: 8px;
+  color: rgba(41, 41, 41, 0.777);
+  margin-top: 10px;
 }
 
 .mealPrice {
   font-size: 1rem;
-  color: rgba(0, 0, 0, 0.801);
+  padding: 4px 0 4px 0;
+  font-weight: 600;
+  color: rgba(41, 41, 41, 0.876);
+}
+
+.cartBtnContainer {
+  display: flex;
+  align-items: center;
 }
 
 .addCartBtn {
   cursor: pointer;
-  width: 6rem;
-  height: 2rem;
+  font-size: 14px;
+  font-weight: 600;
+  width: 7rem;
+  height: 2.5rem;
   outline: none;
   border: none;
-  background: rgba(255, 0, 0, 0.849);
+  background: rgba(41, 41, 41);
   color: rgb(255, 255, 255);
   border-radius: 6px;
 }
 
-.seeMore {
+.slider {
   display: flex;
-  justify-content: right;
+  justify-content: center;
   padding: 20px;
-  margin-right: 5rem;
+}
+
+.slider div {
+  cursor: pointer;
+  width: 10px;
+  height: 10px;
+  border-radius: 5rem;
+  background: rgba(158, 157, 157, 0.661);
+  margin: 14px 12px 14px 12px;
+  padding: 7px;
+}
+
+.slider div:hover {
+  transform: scale(1.3);
+  transition: 0.2s linear;
+}
+
+.slider div:nth-child(1) {
+  background: rgb(46, 46, 46);
 }
 
 .seeMoreText{
@@ -557,5 +627,10 @@ td:nth-child(2){
   @keyframes bannerEase {
     0%{opacity: 0}
     100%{opacity: 1}
+  }
+
+  @keyframes loading {
+    0%{transform: scale(1);}
+    100%{transform: scale(1.2);}
   }
 /* End Of Keyframes //////////////////////////////////////////////////////////////////////////////////////// */
